--- a/examples/guides/legends/accidents-all-top-legend.html
+++ b/examples/guides/legends/accidents-all-top-legend.html
@@ -57,7 +57,7 @@
         // Define Viz object and custom style
         const viz = new carto.Viz(`
             width: 7
-            color: ramp($weather,[darkorange,darkviolet,darkturquoise])
+            color: ramp(top($weather,3),[darkorange,darkviolet,darkturquoise])
             strokeWidth: 0.2
             strokeColor: black 
         `);
@@ -87,7 +87,7 @@
                 
                 // Style for legend items based on geometry type
                 colorLegendList +=
-                    `<li><span class="point-mark" style="background-color:${color};border: 1px solid black;"></span> <span>${legend.key}</span></li>\n`;
+                    `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key.replace('CARTO_VL_OTHERS', 'Other weather')}</span></li>\n`;
             });
             
             // Place list items in the content section of the title/legend box
