--- a/examples/guides/getting-started/step-2.html
+++ b/examples/guides/getting-started/step-2.html
@@ -35,8 +35,8 @@
 
         // Define and style Viz object
         const viz = new carto.Viz(`
-                color: red
-                width: 10
+                color: purple
+                width: 5
             `);
 
         // Define map layer
