--- a/examples/guides/zoom-based-styling/zoom-based-get-started.html
+++ b/examples/guides/zoom-based-styling/zoom-based-get-started.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <script src='https://libs.cartocdn.com/carto-vl/%VERSION%/carto-vl.min.js'></script>
+    <script src="../../../dist/carto-vl.js"></script>
 
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
