Refactor renaming `getCenter` to `getCentroid` in LightweightFeature

--- a/debug/centroids.html
+++ b/debug/centroids.html
@@ -65,7 +65,7 @@
                   "type": "Feature",
                   "geometry": {
                     "type": "Point",
-                    "coordinates": f.getCenter()
+                    "coordinates": f.getCentroid()
                   },
                   "properties": {
                     "field": f.properties[field]
