--- a/debug/labels.html
+++ b/debug/labels.html
@@ -65,7 +65,7 @@
             "type": "Feature",
             "geometry": {
               "type": "Point",
-              "coordinates": f.getCenter()
+              "coordinates": f.getCentroid()
             },
             "properties": {
               "pop_max": `${f.properties.pop_max}`,
