--- a/debug/labels2.html
+++ b/debug/labels2.html
@@ -67,7 +67,7 @@
             "type": "Feature",
             "geometry": {
               "type": "Point",
-              "coordinates": f.getCenter()
+              "coordinates": f.getCentroid()
             },
             "properties": {
               "name": `${f.properties.name}`,
