Fix example dependency URL

--- a/examples/guides/aggregations/step-2.html
+++ b/examples/guides/aggregations/step-2.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../../style.css">
 
     <!-- Numeral.js for number formatting -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
 </head>
 
 <body>
