--- a/examples/guides/ramp/accidents-bubblemap.html
+++ b/examples/guides/ramp/accidents-bubblemap.html
@@ -8,9 +8,9 @@
     <!-- Include CARTO VL JS -->
     <script src="../../../dist/carto-vl.js"></script>
     <!-- Include Mapbox GL JS -->
-    <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
     <!-- Include Mapbox GL CSS -->
-    <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
@@ -38,7 +38,8 @@
                             id="viz0" checked>
                         <label for="viz0">
                             <h2>ramp($total_damage, [0, 50])</h2>
-                            <p class="description open-sans">This will set a 0 pixel width to accidents with the minimum amount of damage in the dataset and 50 pixels to the one with the most damage.</span></p>
+                            <p class="description open-sans">This will set a 0 pixel width to accidents with the
+                                minimum amount of damage in the dataset and 50 pixels to the one with the most damage.</span></p>
                         </label>
                     </li>
                     <li>
@@ -46,7 +47,11 @@
                             id="viz1">
                         <label for="viz1">
                             <h2>sqrt(ramp($total_damage, [0, 50^2]))</h2>
-                            <p class="description open-sans">The same as before for the extreme points, but the interpolation will be linear in area, not in width. An intermediate accident with half the damage of the worst accident will get half the area of the worst (50²/2), but not half its width. Unless you want to accentuate differences, this is usually the proper way to make a bubble map</span></p>
+                            <p class="description open-sans">The same as before for the extreme points, but the
+                                interpolation will be linear in area, not in width. An intermediate accident with half
+                                the damage of the worst accident will get half the area of the worst (50²/2), but not
+                                half its width. Unless you want to accentuate differences, this is usually the proper
+                                way to make a bubble map</span></p>
                         </label>
                     </li>
                     <li>
@@ -54,7 +59,8 @@
                             id="viz4">
                         <label for="viz4">
                             <h2>sqrt($total_damage/globalMax($total_damage))*50')</h2>
-                            <p class="description open-sans">The same as before since the dataset has accidents with zero damage.</span></p>
+                            <p class="description open-sans">The same as before since the dataset has accidents with
+                                zero damage.</span></p>
                         </label>
                     </li>
                     <li>
@@ -62,7 +68,8 @@
                             id="viz2">
                         <label for="viz2">
                             <h2>ramp(globalEqIntervals($total_damage, 3), [1, 25])</h2>
-                            <p class="description open-sans">Classifiers can be used too. In this example, the "Equal Intervals" method allows to detect the outliers quickly.</span></p>
+                            <p class="description open-sans">Classifiers can be used too. In this example, the "Equal
+                                Intervals" method allows to detect the outliers quickly.</span></p>
                         </label>
                     </li>
                 </ul>
