--- a/examples/guides/ramp/accidents-category-histogram.html
+++ b/examples/guides/ramp/accidents-category-histogram.html
@@ -8,9 +8,9 @@
     <!-- Include CARTO VL JS -->
     <script src="../../../dist/carto-vl.js"></script>
     <!-- Include Mapbox GL JS -->
-    <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
     <!-- Include Mapbox GL CSS -->
-    <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <!-- Airship -->
     <link rel="stylesheet" href="https://libs.cartocdn.com/airship-style/v1.0.0-beta.0/airship.css">
@@ -24,7 +24,7 @@
             <header>
                 <h1>Accident type</h1>
             </header>
-            <as-category-widget disable-interactivity/>
+            <as-category-widget disable-interactivity />
             <footer class="js-footer"></footer>
         </div>
     </aside>
