--- a/examples/guides/ramp/accidents-widgets.html
+++ b/examples/guides/ramp/accidents-widgets.html
@@ -8,9 +8,9 @@
     <!-- Include CARTO VL JS -->
     <script src="../../../dist/carto-vl.js"></script>
     <!-- Include Mapbox GL JS -->
-    <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
     <!-- Include Mapbox GL CSS -->
-    <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
@@ -24,10 +24,14 @@
             <p class="description open-sans">Displaying additional information</p>
             <div id="widgets">
                 <div>
-                    <label>Viewport accidents:</label><div id="widget-viewport-accidents"></div>
-                    <label>Total accidents:</label><div id="widget-total-accidents"></div>
-                    <label>Viewport damage:</label><div id="widget-viewport-damage"></div>
-                    <label>Total damage:</label><div id="widget-total-damage"></div>
+                    <label>Viewport accidents:</label>
+                    <div id="widget-viewport-accidents"></div>
+                    <label>Total accidents:</label>
+                    <div id="widget-total-accidents"></div>
+                    <label>Viewport damage:</label>
+                    <div id="widget-viewport-damage"></div>
+                    <label>Total damage:</label>
+                    <div id="widget-total-damage"></div>
                 </div>
             </div>
             <footer class="js-footer"></footer>
@@ -72,10 +76,10 @@
             }
         });
 
-        layer.on('updated', ()=>{
+        layer.on('updated', () => {
             // Update widgets
-            document.getElementById('widget-total-damage').innerText = `$ ${viz.variables.totalDamage.value/1000000} M`;
-            document.getElementById('widget-viewport-damage').innerText = `$ ${viz.variables.viewportDamage.value/1000000} M`;
+            document.getElementById('widget-total-damage').innerText = `$ ${viz.variables.totalDamage.value / 1000000} M`;
+            document.getElementById('widget-viewport-damage').innerText = `$ ${viz.variables.viewportDamage.value / 1000000} M`;
             // document.getElementById('widget-total-accidents').innerText = viz.variables.totalAccidents.value;
             document.getElementById('widget-viewport-accidents').innerText = viz.variables.viewportAccidents.value;
         });
