--- a/examples/guides/ramp/population-density-colors.html
+++ b/examples/guides/ramp/population-density-colors.html
@@ -8,9 +8,9 @@
     <!-- Include CARTO VL JS -->
     <script src="../../../dist/carto-vl.js"></script>
     <!-- Include Mapbox GL JS -->
-    <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
     <!-- Include Mapbox GL CSS -->
-    <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
@@ -30,12 +30,13 @@
                                 id="viz1" checked>
                             <label for="viz1">
                                 <h2>ramp($dn, [green, yellow, red])</h2>
-                                <p class="description open-sans"> Take colors from a color list. Since the input is an unclassified numeric property, interpolation of the colors values will be performed.</p>
+                                <p class="description open-sans"> Take colors from a color list. Since the input is an
+                                    unclassified numeric property, interpolation of the colors values will be
+                                    performed.</p>
                             </label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, temps)')"
-                                id="viz2">
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, temps)')" id="viz2">
                             <label for="viz2">
                                 <h2>ramp($dn, temps)</h2>
                                 <p class="description open-sans"> Use the "temps" CARTOColors palette.</p>
@@ -46,7 +47,8 @@
                                 id="viz3">
                             <label for="viz3">
                                 <h2>'ramp($dn, [hsv(0.5, 1,1), hsv(1, 1, 1)])'</h2>
-                                <p class="description open-sans">Take colors from a color list with HSV color constructors.</p>
+                                <p class="description open-sans">Take colors from a color list with HSV color
+                                    constructors.</p>
                             </label>
                         </li>
                         <li>
@@ -54,7 +56,8 @@
                                 id="viz4">
                             <label for="viz4">
                                 <h2>'ramp($dn, [transparent, gray, yellow])'</h2>
-                                <p class="description open-sans">The same as the first example, but showing that `ramp` supports transparency too.</p>
+                                <p class="description open-sans">The same as the first example, but showing that `ramp`
+                                    supports transparency too.</p>
                             </label>
                         </li>
                     </ul>
@@ -92,7 +95,7 @@
 
         layer.on('updated', () => {
             // Get the legend
-            if (!layer.viz.color.getLegendData){
+            if (!layer.viz.color.getLegendData) {
                 return;
             }
 
