--- a/examples/guides/ramp/population-density-basic.html
+++ b/examples/guides/ramp/population-density-basic.html
@@ -30,10 +30,7 @@
                                 id="viz1" checked>
                             <label for="viz1">
                                 <h2>ramp($dn, [green, yellow, red])</h2>
-                                <p class="description open-sans">This will be implicitly casted to <span>ramp(linear($population_density),
-                                        [green, yellow, red])</span> which will be implicitly <span>casted to
-                                        ramp(linear($population_density, globalMin($population_density),
-                                        globalMax($population_density)), [green, yellow, red])</span></p>
+                                <p class="description open-sans">This will be implicitly casted to <span>ramp(linear($population_density), [green, yellow, red])</span> which will be implicitly casted to <span>ramp(linear($population_density, globalMin($population_density), globalMax($population_density)), [green, yellow, red])</span></p>
                             </label>
                         </li>
                         <li>
@@ -64,11 +61,8 @@
                             <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalPercentile($dn, 1), globalPercentile($dn, 99)), [green, yellow, red])')"
                                 id="viz5">
                             <label for="viz5">
-                                <h2>ramp(linear($dn, globalPercentile($dn, 1), globalPercentile($dn, 99)), [green,
-                                    yellow, red])</h2>
-                                <p class="description open-sans">The data range has been set to avoid taking into
-                                    account the first 1% of the data and the last 1% of the data. For dynamic datasets
-                                    this is better than the previous fixed approach.</p>
+                                <h2>ramp(linear($dn, globalPercentile($dn, 1), globalPercentile($dn, 99)), [green, yellow, red])</h2>
+                                <p class="description open-sans">The data range has been set to avoid taking into account the first 1% of the data and the last 1% of the data. For dynamic datasets this is better than the previous fixed approach.</p>
                                 </h2>
                         </li>
                     </ul>
