--- a/examples/guides/ramp/population-density-colors.html
+++ b/examples/guides/ramp/population-density-colors.html
@@ -30,9 +30,7 @@
                                 id="viz1" checked>
                             <label for="viz1">
                                 <h2>ramp($dn, [green, yellow, red])</h2>
-                                <p class="description open-sans"> Take colors from a color list. Since the input is an
-                                    unclassified numeric property, interpolation of the colors values will be
-                                    performed.</p>
+                                <p class="description open-sans"> Take colors from a color list. Since the input is an unclassified numeric property, interpolation of the colors values will be performed.</p>
                             </label>
                         </li>
                         <li>
@@ -47,8 +45,7 @@
                                 id="viz3">
                             <label for="viz3">
                                 <h2>'ramp($dn, [hsv(0.5, 1,1), hsv(1, 1, 1)])'</h2>
-                                <p class="description open-sans">Take colors from a color list with HSV color
-                                    constructors.</p>
+                                <p class="description open-sans">Take colors from a color list with HSV color constructors.</p>
                             </label>
                         </li>
                         <li>
@@ -56,8 +53,7 @@
                                 id="viz4">
                             <label for="viz4">
                                 <h2>'ramp($dn, [transparent, gray, yellow])'</h2>
-                                <p class="description open-sans">The same as the first example, but showing that `ramp`
-                                    supports transparency too.</p>
+                                <p class="description open-sans">The same as the first example, but showing that `ramp` supports transparency too.</p>
                             </label>
                         </li>
                     </ul>
