--- a/debug/animation_sql.html
+++ b/debug/animation_sql.html
@@ -105,8 +105,11 @@
     const layer = new carto.Layer('layer', source, viz);
     layer.addTo(map, 'background');
     layer.on('updated', () => {
-      const time = animation.getProgressValue().toISOString();
-      document.getElementById("timer").textContent = time;
+      const value = animation.getProgressValue();
+      if (value) {
+        const time = value.toISOString();
+        document.getElementById("timer").textContent = time;
+      }
     });
   </script>
 </body>
