--- a/debug/labels2.html
+++ b/debug/labels2.html
@@ -61,7 +61,7 @@
       layer.on('updated', () => {
         const features = viz.variables.f.value;
         const geojsonFeatures = features.filter(f =>
-          f.pop2005 > viz.variables.p80.value || true
+          f.properties.pop2005 > viz.variables.p80.value || true
         ).map(f => {
           return {
             "type": "Feature",
