Add getCentroid to an Interactivity example

--- a/debug/interactive-based-styling.html
+++ b/debug/interactive-based-styling.html
@@ -98,6 +98,10 @@
           strokeWidth: '7',
           strokeColor: 'opacity(LimeGreen, 0.8)'
         }, delay);
+
+        map.flyTo({
+          center: feature.getCentroid()
+        });
       }
     });
     interactivity.on('featureClickOut', event => {
