--- a/examples/guides/add-legends/step-9.html
+++ b/examples/guides/add-legends/step-9.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 
 <head>
-  <script src="../../../dist/carto-vl.js"></script>
+  <script src="https://libs.cartocdn.com/carto-vl/v0.10.0/carto-vl.min.js"></script>
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
-  <link rel="stylesheet" type="text/css" href="../../style.css">
+  <link href="https://carto.com/developers/carto-vl/examples/maps/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -13,11 +13,10 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Percent Master's Degree</h1>
+        <h1>Latitudes</h1>
       </header>
       <section>
         <div id="controls">
-          <p id="content-title"></p>
           <ul id="content"></ul>
         </div>
       </section>
@@ -36,54 +35,46 @@
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.voyager,
-      center: [-122.424335, 37.771521],
-      zoom: 12,
-    });
+      center: [0, 43],
+      zoom: 1,
 
+    });
     map.touchZoomRotate.disableRotation();
 
-    // Autenticate the client
+    // Authenticate the client
     carto.setDefaultAuth({
       username: 'cartovl',
       apiKey: 'default_public'
     });
 
     // Define the source
-    const source = new carto.source.Dataset('demographics_sf');
+    const source = new carto.source.Dataset('populated_places');
 
     // Define the visualization
     const viz = new carto.Viz(`
-      color: ramp(globalquantiles($masters_percent,5),purp)
-      strokeWidth: 1
+      color: ramp(linear($latitude), sunset)
+      width: 5
+      strokeWidth: 0
     `);
 
     // Create the layer
     const layer = new carto.Layer('layer', source, viz);
 
     layer.addTo(map, 'watername_ocean');
-
     layer.on('loaded', () => {
       hideLoader();
 
-      const colorLegend = layer.viz.color.getLegendData({
-        othersLabel: 'Default',
-        samples: 20
-      });
-
+      const colorLegend = layer.viz.color.getLegendData();
       let colorLegendList = '';
-
-      colorLegend.data.forEach((legend) => {
+      // Get the information for legend
+      colorLegend.data.forEach((legend, index) => {
         const colorHex = rgbToHex(legend.value);
-        const keyMin = legend.key[0].toFixed(2).replace('Infinity', '∞');
-        const keyMax = legend.key[1].toFixed(2).replace('Infinity', '+∞');
-
         colorLegendList +=
-          `<li><span class="polygon-mark" style="background-color:${colorHex};"></span> <span>${keyMin} - ${keyMax}</span></li>\n`;
+          `<li><span class="point-mark" style="background-color:${colorHex};"></span> <span>${legend.key}</span></li>\n`;
       });
 
       // Update the legend with the legend information
       document.getElementById('content').innerHTML = colorLegendList;
-      
     });
 
     function hideLoader() {
