--- a/examples/guides/style-with-expressions/step-2.html
+++ b/examples/guides/style-with-expressions/step-2.html
@@ -18,7 +18,7 @@
         <h1>Color spaces</h1>
       </header>
       <section>
-        <p class="description open-sans">The color spaces that we support</p>
+        <p class="description open-sans">Supported color spaces</p>
         <div id="controls">
           <ul>
             <li>
