--- a/examples/guides/style-with-expressions/step-1.html
+++ b/examples/guides/style-with-expressions/step-1.html
@@ -5,21 +5,18 @@
   <title>Geometry types | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <!-- Include CARTO VL JS -->
+
   <script src="../../../dist/carto-vl.js"></script>
-  <!-- Include Mapbox GL JS -->
+
   <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
-  <!-- Include Mapbox GL CSS -->
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
+
   <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
 <body>
-
-  <!-- Add map container -->
   <div id="map"></div>
 
-  <!-- Add title/legend box -->
   <aside class="toolbox">
     <div class="box">
       <header>
@@ -50,17 +47,13 @@
   </aside>
 
   <script>
-
-    // Add basemap and set properties
     const map = new mapboxgl.Map({
       container: 'map',
       style: carto.basemaps.voyager,
       center: [7, 25],
-      zoom: 2,
-      scrollZoom: false,
+      zoom: 2
     });
 
-    // Add zoom controls
     const nav = new mapboxgl.NavigationControl({
       showCompass: false
     });
@@ -68,13 +61,11 @@
 
     //** CARTO VL functionality begins here **//
 
-    // Define user
     carto.setDefaultAuth({
       user: 'cartovl',
       apiKey: 'default_public'
     });
 
-    // Define source
     const source = new carto.source.Dataset('populated_places_small');
 
     // Define Viz object and custom style
@@ -85,10 +76,7 @@
         strokeWidth: 2     // 'strokeWidth' is ignored for lines
     `);
 
-    // Define map layer
     const layer = new carto.Layer('layer', source, viz);
-
-    // Add map layer
     layer.addTo(map);
 
     // Define selection behavior
@@ -105,4 +93,5 @@
   </script>
 
 </body>
+
 </html>
