--- a/examples/guides/style-with-expressions/step-3.html
+++ b/examples/guides/style-with-expressions/step-3.html
@@ -23,11 +23,16 @@
       <header>
         <h1>Access visualization properties</h1>
       </header>
-      <section>
-        <p class="description open-sans">Modify and access visualization properties</p>
-        <label>The current color is:</label>
-        <label id="colorDisplay"></label>
-        <button onclick="randomizeColor()">Randomize color</button>
+      <section class="open-sans">
+        <p class="description">Modify and access visualization properties</p>
+        <br />
+        <div>
+          <label>The current color is:</label>
+          <label id="colorDisplay"></label>
+          <br />
+          <br />
+          <button onclick="randomizeColor()">Randomize color</button>
+        </div>
       </section>
     </div>
   </aside>
