Update old patched MGL v0.48 to official v0.50 and bad references urls

--- a/examples/guides/data-driven-viz-1/step-5.html
+++ b/examples/guides/data-driven-viz-1/step-5.html
@@ -5,12 +5,12 @@
     <title>Add layer | CARTO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <!-- Include CARTO VL JS -->
+
     <script src="../../../dist/carto-vl.js"></script>
-    <!-- Include Mapbox GL JS -->
-    <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
-    <!-- Include Mapbox GL CSS -->
-    <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
+
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
+
     <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
@@ -65,7 +65,7 @@
 
         layer.on('updated', () => {
             // Get the legend
-            if (!layer.viz.color.getLegendData){
+            if (!layer.viz.color.getLegendData) {
                 return;
             }
 
