--- a/examples/guides/add-legends/step-9.html
+++ b/examples/guides/add-legends/step-9.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
-  <script src="https://libs.cartocdn.com/carto-vl/v0.10.0/carto-vl.min.js"></script>
+  <script src="../../../dist/carto-vl.js"></script>
+
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
-  <link href="https://carto.com/developers/carto-vl/examples/maps/style.css" rel="stylesheet">
+
+  <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
 <body>
