--- a/examples/guides/data-driven-viz-1/step-2.html
+++ b/examples/guides/data-driven-viz-1/step-2.html
@@ -5,13 +5,13 @@
     <title>Implicit casts | CARTO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <!-- Include CARTO VL JS -->
-    <script src="https://libs.cartocdn.com/carto-vl/branches/971-guides-aggregation/carto-vl.min.js"></script>
-    <!-- Include Mapbox GL JS -->
-    <script src="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.js"></script>
-    <!-- Include Mapbox GL CSS -->
-    <link href="https://libs.cartocdn.com/mapbox-gl/v0.48.0-carto1/mapbox-gl.css" rel="stylesheet" />
-    <link href="https://carto.com/developers/carto-vl/examples/maps/style.css" rel="stylesheet">
+
+    <script src="../../../dist/carto-vl.js"></script>
+
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
+
+    <link rel="stylesheet" type="text/css" href="../../style.css">
 </head>
 
 <body>
@@ -26,15 +26,18 @@
                 <div id="controls">
                     <ul class="actions">
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, [midnightblue, deeppink, gold])')" id="viz1" checked>
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, [midnightblue, deeppink, gold])')"
+                                id="viz1" checked>
                             <label for="viz1">Style 1</label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn), [midnightblue, deeppink, gold])')" id="viz2">
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn), [midnightblue, deeppink, gold])')"
+                                id="viz2">
                             <label for="viz2">Style 2</label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalMin($dn), globalMax($dn)), [midnightblue, deeppink, gold])')" id="viz3">
+                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalMin($dn), globalMax($dn)), [midnightblue, deeppink, gold])')"
+                                id="viz3">
                             <label for="viz3">Style 3</label>
                         </li>
                     </ul>
