--- a/examples/guides/add-legends/step-4.html
+++ b/examples/guides/add-legends/step-4.html
@@ -15,10 +15,7 @@
 </head>
 
 <body>
-
     <div id="map"></div>
-
-    <!-- Add title/legend box -->
     <aside class="toolbox">
         <div class="box">
             <header>
@@ -34,12 +31,11 @@
     </aside>
 
     <script>
-
         const map = new mapboxgl.Map({
             container: 'map',
             style: carto.basemaps.darkmatter,
             center: [-96, 41],
-            zoom: 3,
+            zoom: 3
         });
 
         carto.setDefaultAuth({
@@ -48,16 +44,13 @@
         });
 
         const source = new carto.source.Dataset("railroad_accidents");
-
         const viz = new carto.Viz(`
             width: 5
             color: ramp(top($weather,3),[darkorange,darkviolet,darkturquoise])
             strokeWidth: 0.2
             strokeColor: black
         `);
-
         const layer = new carto.Layer('layer', source, viz);
-
         layer.addTo(map);
 
         //** ADD LEGEND **//
