--- a/examples/guides/add-legends/step-5.html
+++ b/examples/guides/add-legends/step-5.html
@@ -16,8 +16,6 @@
 
 <body>
     <div id="map"></div>
-
-    <!-- Add title/legend box -->
     <aside class="toolbox">
         <div class="box">
             <header>
@@ -33,12 +31,11 @@
     </aside>
 
     <script>
-
         const map = new mapboxgl.Map({
             container: 'map',
             style: carto.basemaps.darkmatter,
             center: [-96, 41],
-            zoom: 3,
+            zoom: 3
         });
 
         carto.setDefaultAuth({
@@ -47,16 +44,13 @@
         });
 
         const source = new carto.source.Dataset("railroad_accidents");
-
         const viz = new carto.Viz(`
             width: 5
             color: ramp(top($weather,3),[darkorange,darkviolet,darkturquoise])
             strokeWidth: 0.2
             strokeColor: black
         `);
-
         const layer = new carto.Layer('layer', source, viz);
-
         layer.addTo(map);
 
         //** ADD LEGEND **//
@@ -84,7 +78,6 @@
             // Place list items in the content section of the title/legend box
             document.getElementById('content').innerHTML = colorLegendList;
         });
-
     </script>
 
 </body>
