--- a/examples/guides/add-legends/step-9.html
+++ b/examples/guides/add-legends/step-9.html
@@ -38,28 +38,20 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [0, 43],
-      zoom: 1,
-
+      zoom: 1
     });
-    map.touchZoomRotate.disableRotation();
 
-    // Authenticate the client
     carto.setDefaultAuth({
       username: 'cartovl',
       apiKey: 'default_public'
     });
 
-    // Define the source
     const source = new carto.source.Dataset('populated_places');
-
-    // Define the visualization
     const viz = new carto.Viz(`
       color: ramp(linear($latitude), sunset)
       width: 5
       strokeWidth: 0
     `);
-
-    // Create the layer
     const layer = new carto.Layer('layer', source, viz);
 
     layer.addTo(map, 'watername_ocean');
@@ -86,7 +78,6 @@
     function rgbToHex(color) {
       return "#" + ((1 << 24) + (color.r << 16) + (color.g << 8) + color.b).toString(16).slice(1);
     }
-
   </script>
 </body>
 
